--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,21 @@ nosetests.xml
 .mr.developer.cfg
 .project
 .pydevproject
+
+# databases
+sqlite.db
+*.log
+ehthumbs.db
+Icon?
+Thumbs.db
+*.db
+*.db.*
+tags
+selenium-server-standalone-2.*.jar
+database.sqlite
+ft_database.sqlite
+django_server_logfile.txt
+
+#virtstrap
+quickactivate
+.vs.env
